--- a/css/style.css
+++ b/css/style.css
@@ -52,19 +52,35 @@ table td {
 .grade input {
     margin:auto 10px;            
 }
-
+.core {
+    display:block;
+    border:1px black solid;
+    margin-top:-1px;
+    width:167px;
+    height:16px;
+    color:white;
+}
+.core input {
+    margin:auto 10px;            
+}
 .tab
 {
     background-color:black;
     color:white;
     border-top-left-radius:15px 15px;
     border-top-right-radius:15px 15px;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 
 .tab:hover
 {
-    background-color:white;
-    color:black;
+    background-color:white !important;
+    color:black !important;
 }
 
 .school
@@ -77,20 +93,54 @@ table td {
     padding:10px;
     margin-top:-1px;
     margin-left:-1px;
+    width:360px;
+}
+
+.student
+{
+    border-top:1px black solid;
+    border-bottom:1px black solid;
+    padding:5px 5px;
+    margin-left:-1px;
+    margin-top:-1px;
+    margin-bottom:3px;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 
 .teacher
 {
-    border-top-left-radius:5px 5px;
-    border-bottom-left-radius:5px 5px;
-    border-top-right-radius:5px 5px;
-    border-bottom-right-radius:5px 5px;
-    border:1px orange solid;
-    display:inline-block;
+    border-top:1px red solid;
+    border-bottom:1px red solid;
     padding:5px 5px;
+    margin-left:-1px;
+    margin-top:-1px;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
+.teacherbox
+{
+    border:1px grey solid;
+    padding:5px 5px;
+    margin-top:1px;
+    height:20px;
+    width:300px;
+    margin-left:auto;
+    margin-right:auto;
 }
 
 root { 
     display: block;
 }
+
+
 
